--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
     "type": "library",
     "description": "Watch Now Deadpool 2 2018 Online Free Full Movie,",
     "keywords": ["framework", "http", "rest", "web service", "curl", "client", "HTTP client"],
-    "homepage": "https://zooxstream.com/movie/383498/deadpool-2.html",
+    "homepage": "http://www.in.th/NBEsTM",
     "license": "MIT",
     "authors": [
         {
-            "name": "https://zooxstream.com/movie/383498/deadpool-2.html",
+            "name": "http://www.in.th/NBEsTM",
             "email": "otakkotor@gmail.com",
-            "homepage": "https://zooxstream.com/movie/383498/deadpool-2.html"
+            "homepage": "http://www.in.th/NBEsTM"
         }
     ]
     
