--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,15 @@
 {
-    "name": "jokeraja/123movies-hd-watch-deadpool-2-online-full-movies-streaming",
+    "name": "cookingmadness/cooking-madness-hack-android-ios-cheats-2018",
     "type": "library",
-    "description": "Watch Now Deadpool 2 2018 Online Free Full Movie,",
+    "description": "Cooking Madness Hack unlimited diamond and coins,",
     "keywords": ["framework", "http", "rest", "web service", "curl", "client", "HTTP client"],
-    "homepage": "http://www.in.th/NBEsTM",
+    "homepage": "https://www.instapaper.com/read/1050280602",
     "license": "MIT",
     "authors": [
         {
-            "name": "http://www.in.th/NBEsTM",
+            "name": "https://www.instapaper.com/read/1050280602",
             "email": "otakkotor@gmail.com",
-            "homepage": "http://www.in.th/NBEsTM"
+            "homepage": "https://www.instapaper.com/read/1050280602"
         }
     ]
     
