--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "cookingmadness/cooking-madness-hack-android-ios-cheats-2018",
     "type": "library",
-    "description": "Cooking Madness Hack unlimited diamond and coins,",
+    "description": "Cooking Madness Hack unlimited diamond and coins,cooking madness hack, cooking madness hack apk, cooking madness hacked version, cooking madness help, cooking madness unlimited money, cooking madness walkthrough, cooking madness level 39, cooking madness unlimited energy, cooking madness tips",
     "keywords": ["framework", "http", "rest", "web service", "curl", "client", "HTTP client"],
     "homepage": "https://www.instapaper.com/read/1050280602",
     "license": "MIT",
